Dialog: removed mask element to fix scrollbar issues (#159)

--- a/src/less/dialog/ds6/dialog-base.less
+++ b/src/less/dialog/ds6/dialog-base.less
@@ -1,4 +1,4 @@
-// MIXINS
+// UTILITIES
 //-----------------------------
 
 // Element width in percentage - (No of gutters * gutter width / number of elements)px
@@ -21,6 +21,7 @@
 
 .dialog {
     &[role="dialog"] {
+        background-color: fade(@ds6-color-text-default, 70%);
         bottom: 0;
         left: 0;
         -webkit-overflow-scrolling: touch;
@@ -28,6 +29,7 @@
         position: fixed;
         right: 0;
         top: 0;
+        will-change: background-color;
         z-index: 1000;
     }
 
@@ -39,6 +41,7 @@
         left: 0;
         margin: auto;
         margin-bottom: 15vh;
+        min-height: 55px;
         position: absolute;
         right: 0;
         top: 15%;
@@ -51,20 +54,27 @@
         &--full,
         &--left,
         &--right {
-            height: 100%;
+            bottom: 0;
             margin-bottom: 0;
             -webkit-overflow-scrolling: touch;
             overflow-y: auto;
             top: 0;
 
-            .dialog__close {
-                float: right;
-                position: sticky;
+            .dialog {
+                &__body {
+                    min-height: auto;
+                }
+
+                &__close {
+                    float: right;
+                    position: sticky;
+                    z-index: 1;
+                }
             }
         }
 
         &--fill {
-            min-height: 70%;
+            min-height: 70vh;
         }
 
         &--full {
@@ -89,17 +99,6 @@
         }
     }
 
-    &__mask {
-        background-color: @ds6-color-text-default;
-        bottom: 0;
-        left: 0;
-        opacity: 0.7;
-        position: fixed;
-        right: 0;
-        top: 0;
-        will-change: opacity;
-    }
-
     &__body {
         box-sizing: border-box;
         margin: 16px;
@@ -107,10 +106,11 @@
     }
 
     &__close {
-        background: @ds6-color-g201-gray;
+        background-color: @ds6-color-g201-gray;
         border: 0;
         color: @ds6-color-text-default;
         cursor: pointer;
+        margin: 0;
         padding: 16px;
         position: absolute;
         right: 0;
@@ -133,18 +133,29 @@
     // Prime transitions.
     &--show,
     &--hide {
+        // Root animations.
+        &.dialog {
+            &--mask {
+                &-fade {
+                    transition: background-color 0.16s ease-out;
+                }
+
+                &-fade-slow {
+                    transition: background-color 0.32s ease-out;
+                }
+            }
+        }
+
+        // Child animations.
         .dialog {
-            &__window--fade,
-            &__mask--fade {
-                transition: opacity 0.16s ease-out;
-            }
+            &__window {
+                &--fade {
+                    transition: opacity 0.16s ease-out;
+                }
 
-            &__window--slide {
-                transition: transform 0.32s ease-out;
-            }
-
-            &__mask--fade-slow {
-                transition: opacity 0.32s ease-out;
+                &--slide {
+                    transition: transform 0.32s ease-out;
+                }
             }
         }
     }
@@ -156,20 +167,31 @@
             display: block;
         }
 
-        .dialog {
-            &__window--fade,
-            &__mask--fade,
-            &__mask--fade-slow {
-                opacity: 0;
+        // Root animations.
+        &.dialog {
+            &--mask {
+                &-fade,
+                &-fade-slow {
+                    background-color: fade(@ds6-color-text-default, 0%);
+                }
             }
+        }
 
-            &__window--slide {
-                &.dialog__window--left {
-                    transform: translateX(-100%);
+        // Child animations.
+        .dialog {
+            &__window {
+                &--fade {
+                    opacity: 0;
                 }
 
-                &.dialog__window--right {
-                    transform: translateX(100%);
+                &--slide {
+                    &.dialog__window--left {
+                        transform: translateX(-100%);
+                    }
+
+                    &.dialog__window--right {
+                        transform: translateX(100%);
+                    }
                 }
             }
         }
@@ -182,19 +204,25 @@
             display: block;
         }
 
+        // Root animations.
+        &.dialog {
+            &--mask {
+                &-fade,
+                &-fade-slow {
+                    background-color: fade(@ds6-color-text-default, 70%);
+                }
+            }
+        }
+
+        // Child animations.
         .dialog {
-            &__window--fade {
-                opacity: 1;
-            }
+            &__window {
+                &--fade {
+                    opacity: 1;
+                }
 
-            &__window--slide {
-                transform: translateX(0);
-            }
-
-            &__mask {
-                &--fade,
-                &--fade-slow {
-                    opacity: 0.7;
+                &--slide {
+                    transform: translateX(0);
                 }
             }
         }
